--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npx react-scripts build",
+  "buildCommand": "chmod +x node_modules/.bin/* && npm run build",
   "outputDirectory": "build",
   "installCommand": "npm install",
   "framework": "create-react-app"
