--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crave-crate-pastries",
   "version": "1.0.0",
   "description": "A beautiful pastry advertisement website",
+  "homepage": ".",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
